5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1752_1527.log
== TEST (2019-05-16 17:12:51) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFOr = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki < QFor ):
	QFor = Qfor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- ERROR:
File "XXXX", line 4
    PACLoki = float(input())100
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:12:59) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFOr = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki < QFor ):
	QFor = Qfor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    QFor = Qfor + (QFor * PACFor)
NameError: name 'Qfor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:13:47) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFOr = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki < QFor ):
	QFor = Qfor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
	print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    QFor = Qfor + (QFor * PACFor)
NameError: name 'Qfor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:14:29) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFOr = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki > QFor ):
	QFor = Qfor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
	print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    QFor = Qfor + (QFor * PACFor)
NameError: name 'Qfor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:14:37) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFOr = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki > QFor ):
	QFor = Qfor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    QFor = Qfor + (QFor * PACFor)
NameError: name 'Qfor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:15:11) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFOr = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki > QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    QFor = Qfor + (QFor * PACFor)
NameError: name 'Qfor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:15:45) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki > QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    QFor = Qfor + (QFor * PACFor)
NameError: name 'Qfor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:16:19) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:16:45) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:17:10) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:20:51) 
-- CODE:
QIFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QILoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
QFor = QIFor
QLoki = QILoki
while (QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:22:48) 
-- CODE:
QFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QLoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
while(QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:23:38) 
-- CODE:
QFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QLoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
while(QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:19) 
-- CODE:
QFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QLoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
while(QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:19) 
-- CODE:
QFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QLoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
while(QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:19) 
-- CODE:
QFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QLoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
while(QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:19) 
-- CODE:
QFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QLoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
while(QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:24:38) 
-- CODE:
QFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QLoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
while(QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:25:03) 
-- CODE:
QFor = int(input("quantidade inicial de seguidores do deus Forseti:"))
QLoki = int(input("quantidade inicial de seguidores do deus Loki:"))
PACFor = float(input("percentual anual de crescimento dos seguidores do deus Forseti:"))/100
PACLoki = float(input("percentual anual de crescimento dos seguidores do deus Loki"))/100

anos = 0
while(QLoki < QFor ):
	QFor = QFor + (QFor * PACFor)
	QLoki = QLoki + (QLoki * PACLoki)
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
0.204813
-- TEST CASE 1:
---- input:
8000
6000
1.5
4
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
1500
7500
3.2
4
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
9520368741
159874
21.59
54.87
---- correct output:
46
---- user output:
46
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
